# pdf-ingest

./: .gitignore  Dockerfile  README.md  activate  app.py  docker-compose.yml  install  lint  pyproject.toml  run.py  upload_package.sh
.github/workflows/: build_docker_image.yml  lint.yml
exp/: Dockerfile  docker-compose.yml  load_pipeline.py  run.py  translate.py
src/pdf_ingest/: cli.py  cli_docker.py  djvu.py  json_util.py  language_detect.py  language_detection.py  pdf.py  scan_and_convert.py  types.py
tests/: test_language.py
