[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_ingest"
readme = "README.md"
description = "PDF Ingester"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "watchdog>=6.0.0",
    "download>=0.3.5",
    "filelock>=3.16.1",
    "disklru>=2.0.1",
    "appdirs>=1.4.4",
    "rapidfuzz>=3.10.1",
    "progress>=1.6",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pywebview>=5.4",
    "watchfiles>=1.0.5",
    "Flask>=3.0.0",
    "livereload",
]

dynamic = ["version"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "pdf_ingest.__version__" }

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
pdf-ingest = "pdf_ingest.cli:main"